prevent home-link img distorting

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_navigation.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_navigation.scss
@@ -29,7 +29,7 @@
     padding: 0.5rem;
 
     img {
-      height: rem-calc(20);
+      width: rem-calc(340);
       max-width: 70vw;
     }
   }
